--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -12,7 +12,7 @@
     <div class="col-md-7">
         <h3><a href="/recipes/{{ recipe.url }}">{{ loop.index }}. {{ recipe.name }}</a></h3>
         <h5>{{ recipe.time }}</h5>
-        <h5>{{ recipe.serves }}</h5>
+        <h5>Serves {{ recipe.serves }}</h5>
         <h5>{{ recipe.difficulty }}</h5>
         <p>
             {{ recipe.description }}
@@ -29,7 +29,7 @@
     <div class="col-md-7">
         <h3><a href="/recipes/{{ recipe.url }}">{{ loop.index }}. {{ recipe.name }}</a></h3>
         <h5>{{ recipe.time }}</h5>
-        <h5>{{ recipe.serves }}</h5>
+        <h5>Serves {{ recipe.serves }}</h5>
         <h5>{{ recipe.difficulty }}</h5>
         <p>
             {{ recipe.description }}
