added lines in my recipes.html file so the different paragraphs on the screen are broken up giving it a cleaner look

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
             <h5 class="post-subtitle">
                 Our most used recipes
             </h5>
+            <div class="col-md-4">
+                <img class="featurette-image img-responsive" src="#">
+            </div>
             <hr>
             <h5 class="post-subtitle">
                 Our top products
