--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -1,6 +1,100 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h2>{{ page_title }}</h2>
+{% extends 'base.html' %} {% block content %}
+<h3>{{ page_title }}</h3>
 
+<div class="row">
+    <form action="" method="POST" class="col s12">
+        <div class="row">
+            <div class="input-field col s6">
+                <i class="material-icons prefix">create</i>
+                <input id="name" name="name" type="text" class="validate">
+                <label for="icon_prefix">Recipe Name</label>
+            </div>
+            <div class="file-field input-field col s6">
+                <div class="btn">
+                    <span>Image</span>
+                    <input type="file">
+                </div>
+                <div class="file-path-wrapper">
+                    <input id="image_source" name="image_source" class="file-path validate" type="text" placeholder="Upload your recipes image">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="row">
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">access_time</i>
+                    <input id="time" name="time" type="number" class="validate">
+                    <label for="icon_prefix">Time</label>
+                </div>
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">supervisor_account</i>
+                    <input id="serves" name="serves" type="number" class="validate">
+                    <label for="icon_telephone">Serves</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">poll</i>
+                    <select id="difficulty" name="difficulty">
+                        <option value="" disabled selected>Choose The Difficulty</option>
+                        <option value="1">Easy</option>
+                        <option value="2">Medium</option>
+                        <option value="3">Hard</option>
+                    </select>
+                </div>
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">poll</i>
+                    <select id="category" name="category_name">
+                        <option value="" disabled selected>Choose Category</option>
+                        {% for cat in categories %}
+                            <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">subject</i>
+                <textarea name="description" id="description" class="materialize-textarea"></textarea>
+                <label for="icon_prefix">Description</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">local_grocery_store</i>
+                <textarea name="ingredients" id="ingredients" class="materialize-textarea"></textarea>
+                <label for="icon_prefix">Ingredients</label>
+            </div>
+        </div>
+        <h6>Method</h6>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">local_dining</i>
+                <textarea name="method_one" id="method_one" class="materialize-textarea"></textarea>
+                <label for="icon_prefix">Step One</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">local_dining</i>
+                <textarea name="method_two" id="method_two" class="materialize-textarea"></textarea>
+                <label for="icon_prefix">Step Two</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">local_dining</i>
+                <textarea name="method_three" id="method_three" class="materialize-textarea"></textarea>
+                <label for="icon_prefix">Step Three</label>
+            </div>
+        </div>
+        <div class="row">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Add Recipe
+                <i class="material-icons right">playlist_add</i>
+            </button>
+        </div>
+    </form>
+</div>
 
 {% endblock %}
