--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,17 @@
 <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
         <div class="post-preview">
-            <h2 class="post-title">
+            <h3 class="post-title">
                 Favourites
-            </h2>
-            <h5 class="post-subtitle">
-                Our most used recipes
-            </h5>
-            <div class="col-md-4">
-                <img class="featurette-image img-responsive" src="#">
-            </div>
+            </h3>
             <hr>
             <h5 class="post-subtitle">
                 Our top products
             </h5>
+            <hr>
+            <li class="button">
+                <a class="waves-effect waves-light btn" href="{{ url_for('addrecipe') }}">Add Recipe</a>
+            </li>
         </div>
     </div>
 </div>
