Added Products to product page Using images and hyperlinks to amazon

--- a/templates/products.html
+++ b/templates/products.html
@@ -1,4 +1,65 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h3>{{ page_title }}</h3>
+{% extends 'base.html' %} {% block content %}
+<h3>{{ page_title }}</h3>
+<h6>Our products are created with 100% Toxin free, Non stick, Healthy Ceramic Metal. All Our products our both dishwasher and oven safe. Click on the product of your choice for more information.</h6>
+
+<div class="row">
+    <div class="row">
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/GreenPan-Cambridge-ToxinFree-Induction-Dishwasher/dp/B06XBKKR19?ref_=ast_slp_dp&th=1&psc=1">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/71vWN8N%2BeqL._SL1500_.jpg" alt="Saute Pan Image" width=230px height=230px>
+                <h6>Sauté Pan</h6>
+            </a>
+        </div>
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/CC000703-001-Cambridge-ToxinFree-Induction-Dishwasher/dp/B06XBL39JX?ref_=ast_slp_dp&th=1&psc=1">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/81gVqruXmdL._SL1500_.jpg" alt="Frying Pan Image" width=230px height=230px>
+                <h6>Frying Pan</h6>
+            </a>
+        </div>
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/CW002215-003-Cambridge-ToxinFree-Induction-Dishwasher/dp/B01NARTLPC?ref_=ast_slp_dp&th=1&psc=1">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/71yyF%2BD2csL._SL1500_.jpg"  alt="Wok Pan Image" width=230px height=230px>
+                <h6>Wok Pan</h6>
+            </a>
+        </div>
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/GreenPan-Cambridge-ToxinFree-Induction-Dishwasher/dp/B01NCUHPKX?ref_=ast_slp_dp">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/71aweqyKYnL._SL1500_.jpg" alt="Milk Pan Image" width=230px height=230px>
+                <h6>Milk Pan</h6>
+            </a>
+        </div>
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/GreenPan-Cambridge-ToxinFree-Induction-Dishwasher/dp/B01HPPP5P2?ref_=ast_slp_dp&th=1&psc=1">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/71bt%2Bwakv5L._SL1500_.jpg" alt="Sauce Pan Image" width=230px height=230px>
+                <h6>Sauce Pan</h6>
+            </a>
+        </div>
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/CW002320-002-Cambridge-ToxinFree-Induction-Dishwasher/dp/B01HPPOLKC?ref_=ast_slp_dp">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/71CuHztViKL._SL1500_.jpg" alt="Casserole Image" width=230px height=230px>
+                <h6>Casserole With Lid</h6>
+            </a>
+        </div>
+         <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/GreenPan-Cambridge-Healthy-Nonstick-SaucePan/dp/B06XB4VGNR?ref_=ast_slp_dp&th=1&psc=1">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/714mQM41qML._SL1500_.jpg" alt="Sauce Pan Set Image" width=230px height=230px>
+                <h6>Sauce Pan Set</h6>
+            </a>
+        </div>
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/GreenPan-Cambridge-Healthy-Nonstick-Cookware/dp/B06XBJ4638?ref_=ast_slp_dp">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/716XO4mi5oL._SL1500_.jpg" alt="Cookware Set Image" width=230px height=230px>
+                <h6>Cookware Set</h6>
+            </a>
+        </div>
+        <div class="col-md-4 product_imgs">
+            <a href="https://www.amazon.co.uk/GreenPan-Memphis-Healthy-Ceramic-Nonstick/dp/B07G4KBW8Y?ref_=ast_slp_dp&th=1&psc=1">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/71Wa%2BQOSD%2BL._SL1500_.jpg" alt="Frying Pan Set Image" width=230px height=230px>
+                <h6>Frying Pan Set</h6>
+            </a>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
