--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
+{% for recipes in recipe %}
 
 <div class="row">
     <h4 class="col-md-7">{{ recipe.name }}</h4>
@@ -28,4 +29,5 @@
     <p>{{ recipe.method_three }}</p>
     <p>{{ recipe.method_four }}</p>
 </div>
+{% endfor %}
 {% endblock %}
