--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -22,7 +22,7 @@
         <img class="featurette-image img-responsive" src="{{ recipe.image_source }}">
     </div>
     {% else %}
-    
+
     <div class="col-md-5">
         <img class="featurette-image img-responsive" src="{{ recipe.image_source }}">
     </div>
@@ -38,4 +38,23 @@
     {% endif %}
 
 </div>
-<hr class="featurette-divider"> {% endfor %} {% endblock %}
+<hr class="featurette-divider"> {% endfor %}
+
+<!-- <nav aria-label="Page navigation example">
+    <ul class="pagination">
+        <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+        </li>
+    </ul>
+</nav> -->
+{% endblock %}
