--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -9,7 +9,7 @@
                 <input id="name" name="name" type="text" class="validate">
                 <label for="icon_prefix">Recipe Name</label>
             </div>
-             <div class="input-field col s6">
+            <div class="input-field col s6">
                 <i class="material-icons prefix">add_a_photo</i>
                 <input id="image_source" name="image_source" type="text" class="validate">
                 <label for="icon_prefix">Image URL</label>
@@ -83,6 +83,13 @@
                 <i class="material-icons prefix">local_dining</i>
                 <textarea name="method_three" id="method_three" class="materialize-textarea"></textarea>
                 <label for="icon_prefix">Step Three</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">local_dining</i>
+                <textarea name="method_four" id="method_four" class="materialize-textarea"></textarea>
+                <label for="icon_prefix">Step Four</label>
             </div>
         </div>
         <div class="row">
