Updated labels for recipe page stating difficulty of recipe

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -33,9 +33,9 @@
                     <i class="material-icons prefix">poll</i>
                     <select id="difficulty" name="difficulty">
                         <option value="" disabled selected>Choose The Difficulty</option>
-                        <option value="1">Easy</option>
-                        <option value="2">Medium</option>
-                        <option value="3">Hard</option>
+                        <option value="Easy">Easy</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Hard">Hard</option>
                     </select>
                 </div>
                 <div class="input-field col s6">
