--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 <div class="row">
-    <h6 class="col-md-2">{{ recipe.time }}</h6>
+    <h6 class="col-md-2">{{ recipe.time }} Minutes</h6>
     <h6 class="col-md-2">Serves {{ recipe.serves }}</h6>
     <h6 class="col-md-2">{{ recipe.difficulty }}</h6>
 </div>
