--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('products') }}">Our Products</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Log In</a>
+                    </li>
                 </ul>
             </div>
         </div>
