--- a/templates/base.html
+++ b/templates/base.html
@@ -37,12 +37,33 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('products') }}">Our Products</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">Log In</a>
+                    {% if session.user %}
+                    <li class="nav-item {% if 'profile' in request.path %} active {% endif %}">
+                        <a class="nav-link" href="{{url_for('profile', user=session.user)}}">Profile</a>
                     </li>
+                    <li class="nav-item hidden-md-down">
+                        <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item hidden-md-down {% if 'register' in request.path %} active {% endif %}">
+                        <a class="nav-link" href="{{url_for('register')}}">Register</a>
+                    </li>
+                    <li class="nav-item hidden-md-down {% if 'login' in request.path %} active {% endif %}">
+                        <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                    </li> 
                 </ul>
             </div>
         </div>
+        <!-- Flashed messages alerts modal -->
+        <!--<div id="alerts" class="container-fluid">
+            <div class="row justify-content-around">
+                <div id="messages">
+                    {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
+                    <p class="text-center">{{ message }}</p>
+                    {% endfor %} {% endif %} {% endwith %}
+                </div>
+            </div>
+        </div> -->
     </nav>
 
     <!-- Page Header -->
