--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,23 @@
-{% extends 'base.html' %} {% block body %}
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1> Log in </h1>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <form method=POST action="{{ url_for('login') }}">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="text" class="form-control" name="username" placeholder="Username" />
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" name="password" placeholder="Password" />
-                </div>
-                <button type="submit" class="btn btn-primary">Log In</button>
-            </form>
-            <br>
-            <div>
-                Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a>
-            </div>
-        </div>
-    </div>
+	<div class="row justify-content-center">
+		<form method="POST" action="/user_auth">
+			<div class="form-group">
+				<label for="username">User name</label>
+				<input name="username" type="text" class="form-control" placeholder="User name" required>
+			</div>
+			<div class="form-group">
+				<label for="user_password">Password</label>
+				<input class="form-control" name="user_password" type="password" placeholder="Password" required>
+			</div>
+			<button type="submit" class="btn btn-primary btn-block">Login</button>
+		</form>
+	</div>
 </div>
 
 {% endblock %}
