--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
 <h3>{{ page_title }}</h3>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css" /> 
-{% for recipe in recipes %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css" /> {% for recipe in recipes %}
 
 
 <div class="row featurette">
@@ -10,7 +9,7 @@
     {% if loop.index % 2 != 0 %}
 
     <div class="col-md-7">
-        <h4><a href="{{ url_for(" recipes_recipe ", recipe_id=recipe._id, sluggify_url=recipe.sluggify_url) }}">{{ loop.index }}. {{ recipe.name }}</a></h4>
+        <h4><a href="{{ url_for(" 'recipes_recipe', recipe_id=recipe._id, sluggify_url=recipe.sluggify_url ") }}">{{ loop.index }}. {{ recipe.name }}</a></h4>
         <h6>{{ recipe.time }}</h6>
         <h6>Serves {{ recipe.serves }}</h6>
         <h6>{{ recipe.difficulty }}</h6>
@@ -40,7 +39,7 @@
 </div>
 <hr class="featurette-divider"> {% endfor %}
 
-<nav aria-label="Page navigation example">
+<!--<nav aria-label="Page navigation example">
     <ul class="pagination">
         <li class="page-item">
             <a class="page-link" href="#" aria-label="Previous">
@@ -56,5 +55,5 @@
       </a>
         </li>
     </ul>
-</nav>
+</nav> -->
 {% endblock %}
