--- a/templates/register.html
+++ b/templates/register.html
@@ -1,22 +1,39 @@
-{% extends 'base.html' %} {% block body %}
+{% extends "base.html" %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <form method=POST action="{{ url_for('register') }}">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="text" class="form-control" name="username" placeholder="Username" />
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" name="password" placeholder="Password" />
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-            <br>
-        </div>
-    </div>
-</div>
+{% block main_content %}
 
-{% endblock %}
+<h1> Register </h1>
+
+<section class="container-fluid">
+	<div class="row">
+		<div class="card mx-auto">
+			<div class="card-body">
+				<form class="form-signin" method="POST" action="/register">
+					<div class="form-group">
+						<label for="sign-in-username">User name*</label>
+						<input name="username" type="text" class="form-control" id="sign-in-username" required>
+					</div>
+					<div class="form-group">
+						<label for="email">Email</label>
+						<input name="email" type="email" class="form-control" id="email">
+					</div>
+					<div class="form-group">
+						<label for="sign-in-password">Password*</label>
+						<input class="form-control" name="user_password" type="password" id="sign-in-password" required>
+					</div>
+					<div class="form-group">
+						<label for="sign-in-password">Password again*</label>
+						<input class="form-control" name="user_password1" type="password" id="sign-in-password1" required>
+					</div>
+					<div class="form-group">
+						<p>
+							*Required field
+						</p>
+					</div>
+					<button class="btn btn-outline-success btn-lg btn-block" type="submit">Sign Up</button>
+				</form>
+			</div>
+		</div>
+	</div>
+</section>
+{% endblock main_content %}
