fixed a bug in recipes.html

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block main_content %}
+{% block content %}
 
 <h1> Register </h1>
 
@@ -36,4 +36,4 @@
 		</div>
 	</div>
 </section>
-{% endblock main_content %}
+{% endblock %}
