--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-<h1> Register </h1>
+<h3> Register </h3>
 
 <section class="container-fluid">
 	<div class="row">
-		<div class="card mx-auto">
+		<div class="mx-auto">
 			<div class="card-body">
 				<form class="form-signin" method="POST" action="/register">
 					<div class="form-group">
@@ -15,7 +15,7 @@
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label>
-						<input name="email" type="email" class="form-control" id="email">
+						<input name="email" type="email" class="form-control" id="email" required>
 					</div>
 					<div class="form-group">
 						<label for="sign-in-password">Password*</label>
