--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,8 @@
 
 {% extends "base.html" %}
 
-{% block main_content %}
+{% block content %}
 
-<h1> Welcome {{ user.username|title }} </h1>
+<h3> Welcome {{ user.username|title }} </h3>
 
-{% endblock main_content %}
+{% endblock %}
