--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="row">
-    <h4 class="col-md-7">{{ recipe.name }}</h4>
+    <div class="col-md-7">
+        <h4>{{ recipe.name }}</h4>
+        <div class="row">
+            <h6 class="col-md-4">{{ recipe.time }} Minutes</h6>
+            <h6 class="col-md-4">Serves {{ recipe.serves }}</h6>
+            <h6 class="col-md-4">{{ recipe.difficulty }}</h6>
+        </div>
+    </div>
     <div class="col-md-5">
         <img src="{{ recipe.image_source }}" alt="Image of {{ recipe.name }}" />
     </div>
-</div>
-<div class="row">
-    <h6 class="col-md-2">{{ recipe.time }} Minutes</h6>
-    <h6 class="col-md-2">Serves {{ recipe.serves }}</h6>
-    <h6 class="col-md-2">{{ recipe.difficulty }}</h6>
 </div>
 <hr>
 
