Added edit button to recipe page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,13 @@
 .btn {
    padding: 0px 0px;
 }
-
+.btn_small{
+    height: 24px;
+    width: 60px;
+    line-height: 24px;
+    margin: 5px 5px;
+    padding: 0 0.5em;
+}
 #alerts {
     position: absolute;
     display: none;
