--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,8 @@
-
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <h3> Welcome {{ user.username|title }} </h3>
 
-{% endblock %}
+
+
+
+</a> {% endblock %}
