--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,9 +6,6 @@
    padding: 0px 0px;
 }
 .btn_small{
-    height: 24px;
-    width: 60px;
-    line-height: 24px;
     margin: 5px 5px;
     padding: 0 0.5em;
 }
@@ -27,3 +24,29 @@
     margin: 10px 0px;
 }
 
+@media only screen and (min-width:992px) {
+    #mainNav {
+        border-bottom: 1px solid transparent;
+        background: 0 0
+    }
+    #mainNav .navbar-brand {
+        padding: 0px 0px;
+        color: #fff
+    }
+    #mainNav .navbar-brand:focus,
+    #mainNav .navbar-brand:hover {
+        color: rgba(255, 255, 255, .8)
+    }
+    #mainNav .navbar-nav>li.nav-item>a {
+        padding: 0px 0px;
+        color: #fff
+    }
+    #mainNav .navbar-nav>li.nav-item>a:focus,
+    #mainNav .navbar-nav>li.nav-item>a:hover {
+        color: rgba(255, 255, 255, .8)
+    }
+}
+
+.greenpan {
+    color: green;
+}
