--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -31,11 +31,13 @@
     <p>{{ recipe.method_four }}</p>
 </div>
 
+{% if session.user %}
 <div class="button">
     <div class="col s3">
-        <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"class="waves-effect waves-light btn btn_small"><i class="material-icons left">create</i>Edit</a>
-        <a class="waves-effect waves-light btn btn_small red"><i class="material-icons left">delete_forever</i>Delete</a>
+        <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small"><i class="material-icons left">create</i>Edit</a>
+        <a href="{{url_for('delete_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small red"><i class="material-icons left">delete_forever</i>Delete</a>
     </div>
 </div>
+{% endif %}
 
 {% endblock %}
