--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -2,7 +2,7 @@
 <h3>{{ page_title }}</h3>
 
 <div class="row">
-    <form action="{{ url_for('update_recipe') }}" method="POST" class="col s12">
+    <form action="{{ url_for('update_recipe', recipe_id=recipe._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
                 <i class="material-icons prefix">create</i>
