--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,8 +4,8 @@
 
 
 <div class="search_bar">
-   <form action="{{ url_for('search') }}" method="POST" "form-inline my-2 my-lg-0"> 
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+   <form action="{{ url_for('search') }}" class="form-inline my-2 my-lg-0"> 
+      <input class="form-control mr-sm-2"  name="q" id="q" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 </div>
