--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -42,7 +42,7 @@
                     <i class="material-icons prefix">poll</i>
                     <select multiple id="category" name="category_name" required>
                         <option value="" disabled selected>Choose Category</option>
-                        {% for cat in categories %}
+                        {% for cat in category %}
                             <option value="{{cat.category_name}}">{{cat.category_name}}</option>
                         {% endfor %}
                     </select>
