--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,9 +4,8 @@
 
 
 <div class="search_bar">
-   <form action="{{ url_for('search') }}" class="form-inline my-2 my-lg-0"> 
+   <form action="{{ url_for('search') }}", "{{ url_for('search_ingredients') }}"class="form-inline my-2 my-lg-0"> 
       <input class="form-control mr-sm-2"  name="q" id="q" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 </div>
 <link rel="stylesheet " href="{{ url_for( 'static', filename='css/style.css' ) }} " type="text/css " /> {% for recipe in recipes %}
