--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,14 @@
 </head>
 
 <body>
-    <!-- Navigation -->
+    Navigation
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand navbar-brand" href="{{ url_for('index') }}">Healthy Recipes</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-            </button>
+         Menu
+         <i class="fas fa-bars"></i>
+             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -54,6 +54,7 @@
             </div>
         </div>
     </nav>
+
 
     <!-- Page Header -->
     {% if session.user %}
