--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,39 @@
 {% extends 'base.html' %} {% block content %}
+{% if session.user %}
 <div class="row">
     <div class="col-lg-12 col-md-10 mx-auto intro-text">
-        <p>Welcome to Healthy Recipes. Health is so important to us, so we have created a site filled with deliciously healthy recipes for you to make; which are so good and simple you'll never look back. We would love for you to share your favourite healthy
-            recipes as well. All you have to do is log in to add a recipe and submit. When thinking about healthy cooking, utensils is something that should always come to mind, you never want to cook with anything that places toxic fumes or chemicals
-            into your food, therefore, its wise to check your cooking utensils carefully. If you click on our products page, you'll find a broad range of cooking utensils that are revolutionising the industry. All our products are 100% toxin-free. Not
-            only PFOA-FREE but also NO PFAS, NO LEAD and NO CADMIUM. All made from natural materials. Our ceramic non-stick coating is derived from sand. Even if you overheat your pan, it will never emit toxic fumes. Our 6th generation diamond reinforced
-            non-stick coating gives super performance and is suitable on all hobs.
+        <h5 class="intro-title">Welcome to Healthy Recipes</h5>
+        <p> Health is so important to us, so we have created a site filled with deliciously healthy recipes for you to make; which are so good and simple you'll never look back. We would love for you to share your favourite healthy recipes as well. All you
+            have to do is simply click the add a recipe button and submit.
+        </p>
+        <hr>
+        <p>
+            When thinking about healthy cooking, utensils is something that should always come to mind, you never want to cook with anything that places toxic fumes or chemicals into your food, therefore, its wise to check your cooking utensils carefully.
+        </p>
+        <hr>
+        <p>
+            If you click on our products page, you'll find a broad range of cooking utensils that are revolutionising the industry. All our products are 100% toxin-free. Not only PFOA-FREE but also NO PFAS, NO LEAD and NO CADMIUM. All made from natural materials.
+            Our ceramic non-stick coating is derived from sand. Even if you overheat your pan, it will never emit toxic fumes. Our 6th generation diamond reinforced non-stick coating gives super performance and is suitable on all hobs.
         </p>
     </div>
 </div>
+{% else %}
+<div class="row">
+    <div class="col-lg-12 col-md-10 mx-auto intro-text">
+        <h5 class="intro-title">Welcome to Healthy Recipes</h5>
+        <p> Health is so important to us, so we have created a site filled with deliciously healthy recipes for you to make; which are so good and simple you'll never look back. We would love for you to share your favourite healthy recipes as well. All you
+            have to do is log in to add a recipe and submit.
+        </p>
+        <hr>
+        <p>
+            When thinking about healthy cooking, utensils is something that should always come to mind, you never want to cook with anything that places toxic fumes or chemicals into your food, therefore, its wise to check your cooking utensils carefully.
+        </p>
+        <hr>
+        <p>
+            If you click on our products page, you'll find a broad range of cooking utensils that are revolutionising the industry. All our products are 100% toxin-free. Not only PFOA-FREE but also NO PFAS, NO LEAD and NO CADMIUM. All made from natural materials.
+            Our ceramic non-stick coating is derived from sand. Even if you overheat your pan, it will never emit toxic fumes. Our 6th generation diamond reinforced non-stick coating gives super performance and is suitable on all hobs.
+        </p>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
