--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -4,12 +4,12 @@
 <div class="row">
     <form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12">
         <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
                 <i class="material-icons prefix">create</i>
                 <input id="name" name="name" type="text" class="validate" required>
                 <label for="icon_prefix">Recipe Name</label>
             </div>
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
                 <i class="material-icons prefix">add_a_photo</i>
                 <input id="image_source" name="image_source" type="text" class="validate" required>
                 <label for="icon_prefix">Image URL</label>
@@ -17,19 +17,19 @@
         </div>
         <div class="row">
             <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                     <i class="material-icons prefix">access_time</i>
                     <input id="time" name="time" type="number" class="validate" required>
                     <label for="icon_prefix">Time</label>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                     <i class="material-icons prefix">supervisor_account</i>
                     <input id="serves" name="serves" type="number" class="validate" required>
                     <label for="icon_telephone">Serves</label>
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                     <i class="material-icons prefix">poll</i>
                     <select id="difficulty" name="difficulty" required>
                         <option value="" disabled selected>Choose The Difficulty</option>
@@ -38,7 +38,7 @@
                         <option value="Hard">Hard</option>
                     </select>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6">
                     <i class="material-icons prefix">poll</i>
                     <select multiple id="category" name="category_name" required>
                         <option value="" disabled selected>Choose Category</option>
