--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    Navigation
+    <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand navbar-brand" href="{{ url_for('index') }}">Healthy Recipes</a>
@@ -36,9 +36,6 @@
                         <a class="nav-link" href="{{ url_for('products') }}">Our Products</a>
                     </li>
                     {% if session.user %}
-                    <li class="nav-item {% if 'profile' in request.path %} active {% endif %}">
-                        <a class="nav-link" href="{{url_for('profile', user=session.user)}}">Profile</a>
-                    </li>
                     <li class="nav-item hidden-md-down">
                         <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
                     </li>
