--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -9,7 +9,7 @@
                 <input id="name" name="name" type="text" class="validate" required>
                 <label for="icon_prefix">Recipe Name</label>
             </div>
-            <div class="input-field col s12 m6">
+            <div class="input-field col s12 m6 recipe_image ">
                 <i class="material-icons prefix">add_a_photo</i>
                 <input id="image_source" name="image_source" type="text" class="validate" required>
                 <label for="icon_prefix">Image URL</label>
